<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/string_home" />

    <item
        android:id="@+id/menu_key"
        android:icon="@drawable/ic_key_white"
        android:title="@string/string_key" />

    <item
        android:id="@+id/menu_zzim"
        android:icon="@drawable/ic_zzim_white"
        android:title="@string/string_zzim" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/string_search" />

    <item
        android:id="@+id/menu_mypage"
        android:icon="@drawable/ic_mypage_white"
        android:title="@string/string_mypage" />

</menu>